@@ -1,5 +1,7 @@
 = master
 
+* Avoid keeping reference to Roda instance that caches an inline template (jeremyevans)
+
 * Add render_coverage plugin, using tilt 2.1 features to allow for compiled templates in Ruby <3.2 (jeremyevans)
 
 = 3.65.0 (2023-02-13)
